--- a/package.json
+++ b/package.json
@@ -3,34 +3,35 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-	"express": "^4.17.0",
-	"node-sass": "^4.12.0",
-	"path": "^0.12.7",
-	"react": "^16.8.6",
-	"react-dom": "^16.8.6",
-	"react-router-dom": "^5.0.0",
-	"react-scripts": "3.0.1"
+		"express": "^4.17.0",
+		"node-sass": "^4.12.0",
+		"path": "^0.12.7",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-router-dom": "^5.0.0",
+		"react-scripts": "3.0.1",
+		"react-scroll": "^1.7.11"
 	},
 	"scripts": {
-	"start": "node server.js",
-	"dev": "react-scripts start",
-	"build": "react-scripts build",
-	"test": "react-scripts test",
-	"eject": "react-scripts eject"
+		"start": "node server.js",
+		"dev": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-	"extends": "react-app"
+		"extends": "react-app"
 	},
 	"browserslist": {
-	"production": [
-		">0.2%",
-		"not dead",
-		"not op_mini all"
-	],
-	"development": [
-		"last 1 chrome version",
-		"last 1 firefox version",
-		"last 1 safari version"
-	]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
